--- a/package.json
+++ b/package.json
@@ -4,42 +4,85 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
+    "test": "jest",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest --watchAll"
-  },
-  "jest": {
-    "preset": "jest-expo"
+    "gen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/runtime": "^7.20.6",
     "@expo/vector-icons": "^13.0.0",
-    "@react-navigation/bottom-tabs": "^6.0.5",
-    "@react-navigation/native": "^6.0.2",
-    "@react-navigation/native-stack": "^6.1.0",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@graphql-codegen/cli": "^2.16.1",
+    "@graphql-codegen/client-preset": "^1.2.3",
+    "@graphql-codegen/typescript-react-query": "^4.0.6",
+    "@graphql-codegen/urql-introspection": "^2.2.1",
+    "@hookform/resolvers": "^2.9.10",
+    "@react-navigation/bottom-tabs": "^6.4.3",
+    "@react-navigation/native": "^6.0.16",
+    "@react-navigation/native-stack": "^6.9.4",
+    "@react-navigation/stack": "^6.3.9",
+    "@reduxjs/toolkit": "^1.9.1",
+    "@tanstack/react-query": "^4.20.4",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@types/react-test-renderer": "^18.0.0",
+    "axios": "^1.2.1",
     "expo": "~47.0.8",
-    "expo-asset": "~8.6.2",
-    "expo-constants": "~14.0.2",
-    "expo-font": "~11.0.1",
-    "expo-linking": "~3.2.3",
-    "expo-splash-screen": "~0.17.5",
+    "expo-dev-client": "~2.0.1",
+    "expo-fast-image": "^1.1.3",
+    "expo-file-system": "~15.1.1",
+    "expo-secure-store": "^12.0.0",
     "expo-status-bar": "~1.4.2",
-    "expo-system-ui": "~2.0.1",
-    "expo-web-browser": "~12.0.0",
+    "formik": "^2.2.9",
+    "import": "^0.0.6",
+    "moti": "^0.21.0",
+    "native-base": "^3.4.23",
+    "nativewind": "^2.0.11",
+    "pod-install": "^0.1.38",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
-    "react-native-web": "~0.18.9"
+    "react-native-animatable": "^1.3.3",
+    "react-native-fast-image": "^8.6.3",
+    "react-native-gesture-handler": "^2.8.0",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
+    "react-native-shared-element": "^0.8.4",
+    "react-native-svg": "13.4.0",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "~0.18.9",
+    "react-navigation-shared-element": "^3.1.3",
+    "react-query": "^3.39.2",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0",
+    "urql": "^3.0.3",
+    "zod": "^3.19.1",
+    "zod-formik-adapter": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react": "~18.0.24",
+    "@babel/plugin-transform-modules-commonjs": "^7.19.6",
+    "@babel/plugin-transform-runtime": "^7.19.6",
+    "@expo/next-adapter": "^4.0.13",
+    "@graphql-codegen/typescript": "^2.8.5",
+    "@graphql-codegen/typescript-urql": "^3.7.3",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.2.4",
+    "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
-    "jest": "^26.6.3",
-    "jest-expo": "~47.0.1",
-    "react-test-renderer": "18.1.0",
+    "@types/react-native-vector-icons": "^6.4.12",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "jest": "^29.3.1",
+    "react-test-renderer": "^18.2.0",
+    "tailwindcss": "^3.2.4",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.6.3"
   },
   "private": true
