--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "test": "jest",
+    "test": "jest ",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
@@ -32,12 +32,14 @@
     "@tanstack/react-query": "^4.20.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@types/react-test-renderer": "^18.0.0",
+    "@urql/exchange-graphcache": "^5.0.8",
     "axios": "^1.2.1",
+    "babel-jest": "^29.3.1",
     "expo": "~47.0.8",
     "expo-dev-client": "~2.0.1",
     "expo-fast-image": "^1.1.3",
     "expo-file-system": "~15.1.1",
-    "expo-secure-store": "^12.0.0",
+    "expo-secure-store": "~12.0.0",
     "expo-status-bar": "~1.4.2",
     "formik": "^2.2.9",
     "import": "^0.0.6",
@@ -74,16 +76,26 @@
     "@graphql-codegen/typescript": "^2.8.5",
     "@graphql-codegen/typescript-urql": "^3.7.3",
     "@testing-library/react": "^13.4.0",
+    "@types/jasmine": "^4.3.1",
     "@types/jest": "^29.2.4",
+    "@types/mocha": "^10.0.1",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
     "@types/react-native-vector-icons": "^6.4.12",
+    "appium": "^1.22.3",
+    "appium-doctor": "^1.16.2",
+    "cypress": "^12.2.0",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "jasmine": "^4.5.0",
     "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "jest-jasmine2": "^29.3.1",
     "react-test-renderer": "^18.2.0",
     "tailwindcss": "^3.2.4",
     "ts-jest": "^29.0.3",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "wd": "^1.14.0",
+    "webdriverio": "^8.0.13"
   },
   "private": true
 }
