--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@types/react-test-renderer": "^18.0.0",
     "@urql/exchange-graphcache": "^5.0.8",
+    "aws-sdk": "^2.1286.0",
     "axios": "^1.2.1",
     "babel-jest": "^29.3.1",
     "expo": "~47.0.8",
     "expo-dev-client": "~2.0.1",
     "expo-fast-image": "^1.1.3",
     "expo-file-system": "~15.1.1",
+    "expo-image-picker": "~14.0.2",
     "expo-secure-store": "~12.0.0",
     "expo-status-bar": "~1.4.2",
     "formik": "^2.2.9",
@@ -53,6 +55,7 @@
     "react-native-animatable": "^1.3.3",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-image-picker": "^4.10.3",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
