--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "test": "jest ",
+    "test": "jest",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
@@ -21,7 +21,6 @@
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@graphql-codegen/cli": "^2.16.1",
     "@graphql-codegen/client-preset": "^1.2.3",
-    "@graphql-codegen/testing": "^1.18.2",
     "@graphql-codegen/typescript-react-query": "^4.0.6",
     "@graphql-codegen/urql-introspection": "^2.2.1",
     "@hookform/resolvers": "^2.9.10",
@@ -32,9 +31,9 @@
     "@reduxjs/toolkit": "^1.9.1",
     "@tanstack/react-query": "^4.20.4",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/jest-native": "^5.4.1",
     "@testing-library/react-native": "^11.5.0",
     "@types/react-test-renderer": "^18.0.0",
+    "@urql/devtools": "^2.0.3",
     "@urql/exchange-graphcache": "^5.0.8",
     "aws-sdk": "^2.1286.0",
     "axios": "^1.2.1",
@@ -47,7 +46,6 @@
     "expo-secure-store": "~12.0.0",
     "expo-status-bar": "~1.4.2",
     "formik": "^2.2.9",
-    "graphql-ws": "^5.11.2",
     "import": "^0.0.6",
     "moti": "^0.21.0",
     "native-base": "^3.4.23",
@@ -65,7 +63,7 @@
     "react-native-screens": "^3.18.2",
     "react-native-shared-element": "^0.8.4",
     "react-native-svg": "13.4.0",
-    "react-native-testing-library": "^6.0.0",
+    "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9",
     "react-navigation-shared-element": "^3.1.3",
@@ -80,7 +78,6 @@
     "@babel/core": "^7.12.9",
     "@babel/plugin-transform-modules-commonjs": "^7.19.6",
     "@babel/plugin-transform-runtime": "^7.19.6",
-    "@compiled/jest": "^0.7.4",
     "@expo/next-adapter": "^4.0.13",
     "@graphql-codegen/typescript": "^2.8.5",
     "@graphql-codegen/typescript-urql": "^3.7.3",
@@ -91,7 +88,6 @@
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
     "@types/react-native-vector-icons": "^6.4.12",
-    "@types/testing-library__jest-dom": "^5.14.5",
     "appium": "^1.22.3",
     "appium-doctor": "^1.16.2",
     "cypress": "^12.2.0",
